syntax = "proto3";

import "./common.proto";

service PostService {
    rpc List (Empty) returns (Posts) {}
    rpc Detail (PostID) returns (Post) {}
    rpc Add (Post) returns (Post) {}
    rpc Delete (PostID) returns (Empty) {}
}

message PostID {
    required int32 id = 1;
}

message Post {
    required int32 userId = 1;
    required int32 id = 2;
    required string title = 3;
    required string body = 4;
}

message Posts {
    repeated Post post = 1;
}
